# SingleParticleJES-AI-assisted-coding

./: CITATION.cff  README.md  __init__.py  __main__.py  analyzer.py  bug_report.md  cli.py  pasted_content.txt  pull_request_template.md  pyproject.toml  smarthep-singleparticlejes-ai-assisted-coding.txt  todo.md
.github/: CONTRIBUTING  LICENSE  README.md  ci.yml
.github/ISSUE_TEMPLATE/: bug-report-template.md  feature-request-template.md
tests/: test_cli.py
